--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <br>
         <label>Poslední aktualizace: </label>
         <label id="lastUpdate"></label>
+
+
+        <canvas id="myChart" style="width:100%;max-width:80%;max-height: 70%;"></canvas>
+
     </body>
 
     <script src="./data.js"></script>
@@ -17,20 +21,59 @@
     <script src="https://kubaboi.github.io/CheeseFramework/public/scripts/time.js"></script>
     <script src="https://kubaboi.github.io/CheeseFramework/public/scripts/communication.js"></script> 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
+
+
     <script>
+        function formatUnix(unixTime) {
+            var date = new Date(unixTime * 1000);
         
-        var label = document.getElementById("actCount");
+            var year = date.getFullYear();
+            var month = date.getMonth() + 1;
+            var day = date.getDate();
+
+            var hours = date.getHours();
+            var minutes = "0" + date.getMinutes();
+            var seconds = "0" + date.getSeconds();
+
+            var formattedDate = day + "." + month + "." + year;
+            var formattedTime = hours + ':' + minutes.substr(-2) + ':' + seconds.substr(-2);
+
+            return formattedDate + " " + formattedTime;
+        }
+
         var times = Object.keys(data);
+        var values = Object.values(data);
+
+        var label = document.getElementById("actCount");
         label.innerHTML = data[times[times.length - 1]];
 
-        var date = new Date(times[times.length - 1] * 1000);
-        console.log(date.toDateString());
-        var hours = date.getHours();
-        var minutes = "0" + date.getMinutes();
-        var seconds = "0" + date.getSeconds();
+        var label2 = document.getElementById("lastUpdate");
+        label2.innerHTML = formatUnix(times[times.length - 1]);
 
-        var formattedTime = hours + ':' + minutes.substr(-2) + ':' + seconds.substr(-2);
+        var formattedTimes = [];
+        for (let i = 0; i < times.length; i++) {
+            formattedTimes.push(formatUnix(times[i]));
+        }
 
-        console.log(formattedTime);
+        new Chart("myChart", {
+        type: "line",
+        data: {
+            labels: formattedTimes,
+            datasets: [{
+                fill: true,
+                lineTension: 0.2,
+                backgroundColor: "rgba(0,0,255,0.1)",
+                borderColor: "rgba(0,0,255,1)",
+                data: values
+            }]
+        },
+        options: {
+            legend: {display: false},
+            scales: {
+                yAxes: [{ticks: {min: 6, max:1000}}],
+            }
+        }
+        });
     </script>
 </html>
