--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
             font-family: Arial, Helvetica, sans-serif;
         }
         canvas {
-            width:100%;
-            max-width:80%;
+            width: 90% !important;
+            height: 85% !important;
+            color: #b0b3b8;
             margin: auto;
         }
 
