--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         canvas {
             width: 90% !important;
             height: 85% !important;
+            min-width: 950px;
             color: #b0b3b8;
             margin: auto;
         }
