--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
             formattedTimes.push(formatUnix(times[i]));
         }
 
+        const chart = null;
+
         function change(value=0) {
             let indices = [0, formattedTimes.length];
             switch (value) {
