--- a/index.html
+++ b/index.html
@@ -9,10 +9,9 @@
             color: #b0b3b8;
             font-family: Arial, Helvetica, sans-serif;
         }
+
         canvas {
             width: 90% !important;
-            height: 85% !important;
-            min-width: 950px;
             color: #b0b3b8;
             margin: auto;
         }
@@ -24,7 +23,7 @@
             border-radius: 5px;
             border-width: 0;
             transition: 0.5s;
-            width: 100%;
+            margin-left: 10px;
         }
         button:hover {
             --bg-opacity: 0;
@@ -62,6 +61,8 @@
         <input id="minuteInp2" placeholder="Minuta konec" type="number" min="0" max="50" step="10">
         <br><br>
         <button onclick="change()">Zobrazit</button>
+        <button onclick="window.location = 'info.html'">Info</button>
+
         <hr>
 
         <canvas id="myChart"></canvas>
@@ -87,8 +88,6 @@
 
         var label2 = document.getElementById("lastUpdate");
         label2.innerHTML = reworkTime(last[1]);
-
-        const chart = null;
 
         buildLayoutSelect();
         setDefault();
