--- a/info.html
+++ b/info.html
@@ -1,37 +1,8 @@
 <html lang="cs">
-<head>
-    <meta charset='utf-8'>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <style>
-        body {
-            background-color: #242526;
-            color: #b0b3b8;
-            font-family: Arial, Helvetica, sans-serif;
-        }
-
-        button {
-            color: #b0b3b8;
-            background-color: #5a2a75;
-            padding: 10px;
-            border-radius: 5px;
-            border-width: 0;
-            transition: 0.5s;
-            width: 100%;
-        }
-        button:hover {
-            --bg-opacity: 0;
-            box-shadow: none;
-            background-color: #242526;
-            transition: 0.5s;
-        }
-        a:link {
-            color: #bbbb00
-        }
-        a:visited {
-            color: #aaaa00
-        }
-    </style>
+    <head>
+        <meta charset='utf-8'>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./style.css">
     </head>
     <body>
         <p>Zdrojové kody: <a href="https://github.com/KubaBoi/ntk">https://github.com/KubaBoi/ntk</a></p>
