--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <br>
         <label>Poslední aktualizace: </label>
         <label id="lastUpdate"></label>
+        <br>
+        <a href="info.html">Info</a>
 
         <hr>
         <label>Návrhy:</label>
@@ -32,7 +34,6 @@
         <input id="minuteInp2" placeholder="Minuta konec" type="number" min="0" max="50" step="10">
         <br><br>
         <button onclick="change()">Zobrazit</button>
-        <button onclick="window.location = 'info.html'">Info</button>
 
         <hr>
 
