--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
         <button onclick="change()">Zobrazit</button>
 
         <hr>
-
-        <canvas id="myChart"></canvas>
-
+        <h3>Počet lidí:</h3>
+        <canvas id="peopleCountChart"></canvas>
+        <h3>Derivace křivky:</h3>
+        <canvas id="derivativeChart"></canvas>
     </body>
 
     <script src="./data.js"></script>
