--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <label>Poslední aktualizace: </label>
         <label id="lastUpdate"></label>
         <br>
-        <label>Interval automatické aktualizace: `(minuta + 1) % 10 == 0`</label>
+        <label>Interval automatické aktualizace: `(minuta - 1) % 10 == 0`</label>
         <br><br>
         <button onclick="window.locbuttontion = 'info.html'">Info</a>
         <button onclick="rel()">aktualizovat</button>
