--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         <canvas id="peopleCountChart"></canvas>
         <h3>Derivace křivky:</h3>
         <canvas id="derivativeChart"></canvas>
+        <h3>2. derivace křivky:</h3>
+        <canvas id="derivativeSecondChart"></canvas>
     </body>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
