--- a/index.html
+++ b/index.html
@@ -65,11 +65,9 @@
 
     <script>
         debug = true;
-        var data = {};
-        getData();
         setDefault();
-        buildLayoutSelect();
-        //change();
         
+        var data = {};
+        reloadData(true);
     </script>
 </html>
