--- a/info.html
+++ b/info.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <p>Zdrojové kody: <a href="https://github.com/KubaBoi/ntk">https://github.com/KubaBoi/ntk</a></p>
-        <p>Data: <a href="https://kubaboi.github.io/ntk/data.js">https://kubaboi.github.io/ntk/data.js</a></p>
+        <p>Data: <a href="https://kubaboi.github.io/ntk/data.json">https://kubaboi.github.io/ntk/data.json</a></p>
         <p>Autor: Jakub Anderle</p>
     </body>
 </html>
