--- a/info.html
+++ b/info.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset='utf-8'>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
         <p>Zdrojové kody: <a href="https://github.com/KubaBoi/ntk">https://github.com/KubaBoi/ntk</a></p>
