--- a/info.html
+++ b/info.html
@@ -5,13 +5,18 @@
         <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
+        <h1>Info</h1>
+        <p>Zdrojové kody: <a href="https://github.com/KubaBoi/ntk">https://github.com/KubaBoi/ntk</a></p>
+        <p>Data: <a href="https://kubaboi.github.io/ntk/data.json">https://kubaboi.github.io/ntk/data.json</a></p>
+        <p>Autor: Jakub Anderle</p>
+        <hr>
+        <h1></h1>
+        <hr>
+        <h1>Troubleshooting</h1>
         <p>
             Pokud se data nechtějí aktualizovat, stiskni Ctrl+Shift+R. 
             To dá signál tvému prohlížeči signál, aby vymazal mezipaměť stránky
             a načetl jí znova.
         </p>
-        <p>Zdrojové kody: <a href="https://github.com/KubaBoi/ntk">https://github.com/KubaBoi/ntk</a></p>
-        <p>Data: <a href="https://kubaboi.github.io/ntk/data.json">https://kubaboi.github.io/ntk/data.json</a></p>
-        <p>Autor: Jakub Anderle</p>
     </body>
 </html>
