--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <select id="layoutsInp" onchange="changeLayout()">
         </select>
         <br><br>
-        <div>
+        <div class="filterDiv">
             <input id="yearInp" placeholder="Rok" type="number" min="23">
             <input id="yearInp2" placeholder="Rok konec" type="number" min="23">
             <br>
